--- a/server_files/wg0.conf
+++ b/server_files/wg0.conf
@@ -3,7 +3,9 @@ Address = 10.8.0.1/24
 PrivateKey = abcdefghijklmnopqrstuvwxyz
 ListenPort = 51820
 
-# pfSense peer (10.8.0.2) # This makes a "peer" connection to my router and every device on its two sub-networks
+# pfSense peer (10.8.0.2) 
+# This makes a "peer" connection to my router and every device on its two sub-networks
+# Special situation. Probably doesn't apply to you. Feel free to delete this peer.
 [Peer]
 PublicKey = 12345678901234567890
 AllowedIPs = 10.8.0.2/32, 192.168.101.0/24, 192.168.102.0/24
